Regression: Blender crashes when using the VSE which contains a scene on the timeline that contains audio #98021

Closed
opened 2022-05-10 17:51:16 +02:00 by Karl Northfell · 8 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.59

Blender Version
Broken: version: 3.2.0 Beta, branch: master, commit date: 2022-05-10 06:30, hash: 11aa237858
Worked: 3.1.2

Caused by 2ea9d1fccf

Short description of error
When scrubbing or even going to the video editing tab after adding a scene to the VSE that has audio will cause blender to crash. Tested with an MP3 and WAV and got the same result.

Exact steps for others to reproduce the error
This requires audio to work so I included music from youtube studio.

  1. Open VSE_Crash.blend
  2. It will open a scene called "Audio" which has audio in the timeline
  3. Switch to the scene "VSE" which has the "Audio" scene added to the timeline with the input set to sequencer, blender will crash upon attempting to switch scenes

Files:
Crash log:
VSE_Crash.crash.txt
VSE_Crash.blend:
VSE_Crash.blend

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.59 **Blender Version** Broken: version: 3.2.0 Beta, branch: master, commit date: 2022-05-10 06:30, hash: `11aa237858` Worked: 3.1.2 Caused by 2ea9d1fccf **Short description of error** When scrubbing or even going to the video editing tab after adding a scene to the VSE that has audio will cause blender to crash. Tested with an MP3 and WAV and got the same result. **Exact steps for others to reproduce the error** This requires audio to work so I included music from youtube studio. 1. Open VSE_Crash.blend 2. It will open a scene called "Audio" which has audio in the timeline 3. Switch to the scene "VSE" which has the "Audio" scene added to the timeline with the input set to sequencer, blender will crash upon attempting to switch scenes Files: Crash log: [VSE_Crash.crash.txt](https://archive.blender.org/developer/F13065045/VSE_Crash.crash.txt) VSE_Crash.blend: [VSE_Crash.blend](https://archive.blender.org/developer/F13065032/VSE_Crash.blend)
Author

Added subscriber: @GlobalKrampus

Added subscriber: @GlobalKrampus
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. I can confirm.

Finding the responsible commit

Thanks for the report. I can confirm. Finding the responsible commit
Member

Added subscriber: @iss

Added subscriber: @iss
Member

Caused by 2ea9d1fccf
@iss ^

Caused by 2ea9d1fccf @iss ^
Pratik Borhade changed title from Blender crashes when using the VSE which contains a scene on the timeline that contains audio to Regression: Blender crashes when using the VSE which contains a scene on the timeline that contains audio 2022-05-11 08:02:39 +02:00

This issue was referenced by 35e73aa347

This issue was referenced by 35e73aa3472ab8c1e28feec1829fae79967322b5

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2022-05-17 21:23:19 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98021
No description provided.